2013-09-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS:
	Add new OpenJDK changes, remove duplicates
	listed in 2.4.0 which were in earlier
	security releases.

2013-09-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(OPENJDK_VERSION): Bump to b60.
	(CORBA_CHANGESET): Update to IcedTea 2.4 branch HEAD.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* hotspot.map: Update to IcedTea 2.4 branch HotSpot
	HEAD.

2013-07-30  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Bump to b34.
	(CORBA_CHANGESET): Update to IcedTea 2.4 branch HEAD.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* hotspot.map: Update to IcedTea 2.4 branch HotSpot
	HEAD.
	* patches/boot/ecj-diamond.patch:
	Regenerate.  Add new cases in
	com.sun.org.apache.xml.internal.serializer.Encodings,
	sun.nio.ch.EPollArrayWrapper and
	sun.nio.ch.EPollSelectorImpl.
	Remove case in sun.util.logging.PlatformLogger.
	* patches/boot/ecj-multicatch.patch:
	Add new case in
	com.sun.org.apache.xml.internal.serializer.Encodings.

2013-07-08  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* configure.ac: Bump to 2.4.2pre.
	* NEWS: Add 2.4.2 section.

2013-07-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* configure.ac: Set version to 2.4.1.

2013-06-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_WITH_HOTSPOT_BUILD): Define once.