@@ -1937,18 +1937,17 @@ AC_DEFUN_ONCE([IT_CHECK_FOR_LCMS],
 [
   AC_MSG_CHECKING([whether to use the system LCMS install])
   AC_ARG_ENABLE([system-lcms],
-	      [AS_HELP_STRING(--enable-system-lcms,use the system LCMS [[default=no]])],
+	      [AS_HELP_STRING(--enable-system-lcms,use the system LCMS [[default=yes]])],
   [
     ENABLE_SYSTEM_LCMS="${enableval}"
   ],
   [
-    ENABLE_SYSTEM_LCMS="no"
+    ENABLE_SYSTEM_LCMS="yes"
   ])
   AC_MSG_RESULT(${ENABLE_SYSTEM_LCMS})
   if test x"${ENABLE_SYSTEM_LCMS}" = "xyes"; then
-    AC_MSG_WARN([System LCMS may not have the latest security updates])
     dnl Check for LCMS2 headers and libraries.
-    PKG_CHECK_MODULES(LCMS2, lcms2,[LCMS2_FOUND=yes],[LCMS2_FOUND=no])
+    PKG_CHECK_MODULES(LCMS2, lcms2 >= 2.5,[LCMS2_FOUND=yes],[LCMS2_FOUND=no])
     if test "x${LCMS2_FOUND}" = xno
     then
       AC_MSG_ERROR([Could not find LCMS2; install LCMS2 or build with --disable-system-lcms to use the in-tree copy.])
